Removed old-style #include guards and replaced with #pragma once. Made some chnages to the clipping implementation by cleaning it up and preparing for the rest of the implementation.

--- a/ZSharp/ZSharp.vcxproj
+++ b/ZSharp/ZSharp.vcxproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <ClInclude Include="AssetLoader.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="ClipBuffer.h" />
     <ClInclude Include="IndexBuffer.h" />
     <ClInclude Include="VertexBuffer.h" />
     <ClInclude Include="ZConfig.h" />
