--- a/ZSharp/ZSharp.vcxproj
+++ b/ZSharp/ZSharp.vcxproj
@@ -61,7 +61,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="db_schema.json" />
-    <None Include="world_db.json" />
+    <None Include="pyramid.json" />
+    <None Include="triangles.json" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
